tests/ui/consts/const_let_refutable.stderr
error[E0005]: refutable pattern in function argument
  --> $DIR/const_let_refutable.rs:3:16
   |
LL | const fn slice(&[a, b]: &[i32]) -> i32 {
   |                ^^^^^^^ patterns `&[]`, `&[_]` and `&[_, _, _, ..]` not covered
   |
   = note: the matched value is of type `&[i32]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0005`.
